# fixfilt

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  default.nix  fix.cpp  fix.hpp  fix_test.cpp  fixdb.cpp  fixfilt.cpp  gen.py  gen_files.sh  gen_headers.sh  meson.build
